Fix code so it validates and set spacing with SASS update

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -43,3 +43,9 @@
 .form-postcode {
   width: 8em;
 }
+
+details {
+  summary {
+    margin-bottom: $gutter;
+  }
+}
